Update _1. 03012025_get_data_previous_game_day and parse to statistics.ipynb
comment for the workflow and the execution order

--- a/_1. 03012025_get_data_previous_game_day and parse to statistics.ipynb
+++ b/_1. 03012025_get_data_previous_game_day and parse to statistics.ipynb
@@ -8,10 +8,16 @@
    "outputs": [],
    "source": [
     "#########################################################################################################################\n",
-    "# COLLECT DATA FROM PREVIOUS GAME DAY AND ADD THEM TO GENERAL DATASET#\n",
+    "# COLLECT DATA FROM PREVIOUS GAME DAY AND ADD THEM TO GENERAL DATASET\n",
+    "#\n",
+    "# Script 1 of 4:_1. 03012025_get_data_previous_game_day and parse to statistics.ipynb\n",
+    "# - Gathers and updates the dataset with data from the previous game day.\n",
+    "# - Saves the updated dataset to the specified directory.\n",
     "#########################################################################################################################\n"
    ]
-  },
+  }
+ ]
+},
   {
    "cell_type": "code",
    "execution_count": 2,
