--- a/_1. 03012025_get_data_previous_game_day and parse to statistics.ipynb
+++ b/_1. 03012025_get_data_previous_game_day and parse to statistics.ipynb
@@ -503,7 +503,7 @@
     "\n",
     "# Optimized function to find the most recent file\n",
     "def find_most_recent_file(max_days=MAX_DAYS_BACK):\n",
-    "    today = datetime.now().date()\n",
+    "    #today = datetime.now().date()\n",
     "    for days_back in range(1, max_days + 1):\n",
     "        date_str = (today - timedelta(days=days_back)).strftime(\"%Y-%m-%d\")\n",
     "        if file_exists(date_str):\n",
