--- a/_2. 03012025_get_data_next_game_day.ipynb
+++ b/_2. 03012025_get_data_next_game_day.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "# Script 2 of 4\n",
     "# This script collects data for the next game day.\n",
-    "# Ensure `01_collect_data_previous_day.py` is executed before running this script.\n",
+    "# Ensure `_1. 03012025_get_data_previous_game_day and parse to statistics.ipynb` is executed before running this script.\n",
     "#########################################################################################################################\n"
    ]
   },
