--- a/_1. 03012025_get_data_previous_game_day and parse to statistics.ipynb
+++ b/_1. 03012025_get_data_previous_game_day and parse to statistics.ipynb
@@ -68,7 +68,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Today's date: Fri, Jan 17, 2025\n"
+      "Today's date: Tue, Jan 21, 2025\n"
      ]
     }
    ],
@@ -309,12 +309,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-01-17 22:56:25,324 - INFO - File NBA_2025_games-january.html has been removed.\n",
-      "2025-01-17 22:56:25,327 - INFO - Scraping games for: 2025, January\n",
-      "2025-01-17 22:57:01,597 - INFO - Path already exists: D:\\1. Python\\1. NBA Script\\2025\\Gathering_Data\\data\\2025_standings\\NBA_2025_games-october.html\n",
-      "2025-01-17 22:57:01,600 - INFO - Path already exists: D:\\1. Python\\1. NBA Script\\2025\\Gathering_Data\\data\\2025_standings\\NBA_2025_games-november.html\n",
-      "2025-01-17 22:57:01,609 - INFO - Path already exists: D:\\1. Python\\1. NBA Script\\2025\\Gathering_Data\\data\\2025_standings\\NBA_2025_games-december.html\n",
-      "2025-01-17 22:57:16,432 - INFO - Data for January saved.\n"
+      "2025-01-21 21:24:03,342 - INFO - File NBA_2025_games-january.html has been removed.\n",
+      "2025-01-21 21:24:03,344 - INFO - Scraping games for: 2025, January\n",
+      "2025-01-21 21:24:42,202 - INFO - Path already exists: D:\\1. Python\\1. NBA Script\\2025\\Gathering_Data\\data\\2025_standings\\NBA_2025_games-october.html\n",
+      "2025-01-21 21:24:42,204 - INFO - Path already exists: D:\\1. Python\\1. NBA Script\\2025\\Gathering_Data\\data\\2025_standings\\NBA_2025_games-november.html\n",
+      "2025-01-21 21:24:42,206 - INFO - Path already exists: D:\\1. Python\\1. NBA Script\\2025\\Gathering_Data\\data\\2025_standings\\NBA_2025_games-december.html\n",
+      "2025-01-21 21:25:02,388 - INFO - Data for January saved.\n"
      ]
     }
    ],
@@ -358,19 +358,7 @@
    "execution_count": 11,
    "id": "fb984f00-1c4b-483d-912b-79ab48b0873d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Box score saved: D:\\1. Python\\1. NBA Script\\2025\\Gathering_Data\\data\\2025_scores\\202501160DET.html\n",
-      "Box score saved: D:\\1. Python\\1. NBA Script\\2025\\Gathering_Data\\data\\2025_scores\\202501160WAS.html\n",
-      "Box score saved: D:\\1. Python\\1. NBA Script\\2025\\Gathering_Data\\data\\2025_scores\\202501160OKC.html\n",
-      "Box score saved: D:\\1. Python\\1. NBA Script\\2025\\Gathering_Data\\data\\2025_scores\\202501160POR.html\n",
-      "Box score saved: D:\\1. Python\\1. NBA Script\\2025\\Gathering_Data\\data\\2025_scores\\202501160SAC.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def process_standings_files(standings_dir, current_season):\n",
     "    \"\"\"\n",
@@ -468,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "9ceea5f8-f83f-4c14-9908-77a1e82e2d3d",
    "metadata": {},
    "outputs": [
@@ -476,7 +464,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-01-17 22:59:14,193 - INFO - Processing file for 2025-01-16.\n"
+      "2025-01-21 21:26:41,697 - INFO - Processing file for 2025-01-20.\n"
      ]
     }
    ],
@@ -512,9 +500,10 @@
     "\n",
     "# Main script\n",
     "try:\n",
-    "    today = datetime.now().date()\n",
-    "    if today < first_game_date:\n",
-    "        raise RuntimeError(f\"Season has not started. Today: {today}, Start Date: {first_game_date}\")\n",
+    "    #today = datetime.now().date()\n",
+    "    today_date = today.date()\n",
+    "    if today_date < first_game_date:\n",
+    "        raise RuntimeError(f\"Season has not started. Today: {today_date}, Start Date: {first_game_date}\")\n",
     "\n",
     "    most_recent_date = find_most_recent_file()\n",
     "    if most_recent_date:\n",
@@ -528,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "6c4f4052-e5b0-4d15-9877-4be6d2da731d",
    "metadata": {},
    "outputs": [],
@@ -589,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "id": "0ad4b328-ff22-4b6a-becc-e28fcba3303e",
    "metadata": {},
    "outputs": [],
@@ -698,7 +687,7 @@
     "    combined_statistics = pd.concat([existing_statistics, games_df], ignore_index=True)\n",
     "\n",
     "    # Save the combined statistics\n",
-    "    file_name = f\"nba_games_{today}.csv\"\n",
+    "    file_name = f\"nba_games_{today_date}.csv\"\n",
     "    combined_statistics.to_csv(os.path.join(STAT_DIR, file_name), index=False)\n",
     "    logging.info(f\"Combined statistics saved to: {os.path.join(STAT_DIR, file_name)}\")\n",
     "\n",
@@ -708,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "id": "03e10b39-b814-447b-9ae5-9c2c7c427a82",
    "metadata": {},
    "outputs": [
@@ -716,15 +705,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing file for: 2025-01-16\n"
+      "Processing file for: 2025-01-20\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-01-17 22:59:15,937 - INFO - Number of box score files found: 602\n",
-      "2025-01-17 22:59:25,266 - INFO - 5 games were processed.\n"
+      "2025-01-21 21:27:37,952 - INFO - Number of box score files found: 632\n",
+      "2025-01-21 21:27:46,070 - INFO - 8 games were processed.\n"
      ]
     },
     {
@@ -732,16 +721,16 @@
      "output_type": "stream",
      "text": [
       "Sample processed data:\n",
-      "   mp    mp   fg  fga   fg%   3p  3pa   3p%   ft  fta   ft%  orb  drb  trb  ast  stl  blk  tov   pf   pts  gmsc  +/-   ts%  efg%  3par   ftr  orb%  drb%  trb%  ast%  stl%  blk%  tov%  usg%  ortg  drtg  mp_max  mp_max  fg_max  fga_max  fg%_max  3p_max  3pa_max  3p%_max  ft_max  fta_max  ft%_max  orb_max  drb_max  trb_max  ast_max  stl_max  blk_max  tov_max  pf_max  pts_max  gmsc_max  +/-_max  ts%_max  efg%_max  3par_max  ftr_max  orb%_max  drb%_max  trb%_max  ast%_max  stl%_max  blk%_max  tov%_max  usg%_max  ortg_max  drtg_max team  total  home  index_opp  mp_opp  mp_opp  fg_opp  fga_opp  fg%_opp  3p_opp  3pa_opp  3p%_opp  ft_opp  fta_opp  ft%_opp  orb_opp  drb_opp  trb_opp  ast_opp  stl_opp  blk_opp  tov_opp  pf_opp  pts_opp  gmsc_opp  +/-_opp  ts%_opp  efg%_opp  3par_opp  ftr_opp  orb%_opp  drb%_opp  trb%_opp  ast%_opp  stl%_opp  blk%_opp  tov%_opp  usg%_opp  ortg_opp  drtg_opp  mp_max_opp  mp_max_opp  fg_max_opp  fga_max_opp  fg%_max_opp  3p_max_opp  3pa_max_opp  3p%_max_opp  ft_max_opp  fta_max_opp  ft%_max_opp  orb_max_opp  drb_max_opp  trb_max_opp  ast_max_opp  stl_max_opp  blk_max_opp  tov_max_opp  pf_max_opp  pts_max_opp  gmsc_max_opp  +/-_max_opp  ts%_max_opp  efg%_max_opp  3par_max_opp  ftr_max_opp  orb%_max_opp  drb%_max_opp  trb%_max_opp  ast%_max_opp  stl%_max_opp  blk%_max_opp  tov%_max_opp  usg%_max_opp  ortg_max_opp  drtg_max_opp team_opp  total_opp  home_opp season       date  won\n",
-      "240.0 240.0 41.0 89.0 0.461 13.0 30.0 0.433 16.0 22.0 0.727  3.0 37.0 40.0 28.0 13.0  8.0 10.0 17.0 111.0   NaN  NaN 0.562 0.534 0.337 0.247   6.8  72.5  42.1  68.3  12.6  14.5   9.2 100.0 107.3  96.6     NaN     NaN    10.0     20.0      0.8     8.0     11.0    0.727     6.0      7.0      1.0      2.0      7.0      7.0      8.0      4.0      2.0      3.0     4.0     28.0      25.4     16.0    1.014       1.0      0.75      0.8      19.3      33.5      26.8      45.5       4.8       8.0      35.5      26.3     177.0     106.0  IND    111     0          1   240.0   240.0    36.0     91.0    0.396     9.0     36.0     0.25    19.0     22.0    0.864     14.0     41.0     55.0     22.0      3.0      7.0     19.0    20.0    100.0       NaN      NaN    0.497     0.445     0.396    0.242      27.5      93.2      57.9      61.1       2.9      11.9      15.9     100.0      96.6     107.3         NaN         NaN         8.0         21.0          1.0         4.0          9.0          1.0         9.0         11.0          1.0          6.0         11.0         17.0          9.0          2.0          2.0          7.0         5.0         25.0          21.7          5.0        1.007           1.0           0.8        0.786          20.7          47.2          31.6          47.8           2.6           6.0          23.2          30.9         179.0         112.0      DET        100         1   2025 2025-01-16 True\n"
+      "   mp    mp   fg  fga   fg%  3p  3pa   3p%   ft  fta   ft%  orb  drb  trb  ast  stl  blk  tov   pf   pts  gmsc  +/-   ts%  efg%  3par   ftr  orb%  drb%  trb%  ast%  stl%  blk%  tov%  usg%  ortg  drtg  mp_max  mp_max  fg_max  fga_max  fg%_max  3p_max  3pa_max  3p%_max  ft_max  fta_max  ft%_max  orb_max  drb_max  trb_max  ast_max  stl_max  blk_max  tov_max  pf_max  pts_max  gmsc_max  +/-_max  ts%_max  efg%_max  3par_max  ftr_max  orb%_max  drb%_max  trb%_max  ast%_max  stl%_max  blk%_max  tov%_max  usg%_max  ortg_max  drtg_max team  total  home  index_opp  mp_opp  mp_opp  fg_opp  fga_opp  fg%_opp  3p_opp  3pa_opp  3p%_opp  ft_opp  fta_opp  ft%_opp  orb_opp  drb_opp  trb_opp  ast_opp  stl_opp  blk_opp  tov_opp  pf_opp  pts_opp  gmsc_opp  +/-_opp  ts%_opp  efg%_opp  3par_opp  ftr_opp  orb%_opp  drb%_opp  trb%_opp  ast%_opp  stl%_opp  blk%_opp  tov%_opp  usg%_opp  ortg_opp  drtg_opp  mp_max_opp  mp_max_opp  fg_max_opp  fga_max_opp  fg%_max_opp  3p_max_opp  3pa_max_opp  3p%_max_opp  ft_max_opp  fta_max_opp  ft%_max_opp  orb_max_opp  drb_max_opp  trb_max_opp  ast_max_opp  stl_max_opp  blk_max_opp  tov_max_opp  pf_max_opp  pts_max_opp  gmsc_max_opp  +/-_max_opp  ts%_max_opp  efg%_max_opp  3par_max_opp  ftr_max_opp  orb%_max_opp  drb%_max_opp  trb%_max_opp  ast%_max_opp  stl%_max_opp  blk%_max_opp  tov%_max_opp  usg%_max_opp  ortg_max_opp  drtg_max_opp team_opp  total_opp  home_opp season       date   won\n",
+      "240.0 240.0 38.0 88.0 0.432 6.0 32.0 0.188 23.0 26.0 0.885 16.0 35.0 51.0 19.0 10.0  8.0 14.0 15.0 105.0   NaN  NaN 0.528 0.466 0.364 0.295  33.3  67.3  51.0  50.0  10.4  13.6  12.3 100.0 109.1 114.3     NaN     NaN    12.0     24.0      0.8     3.0      8.0      0.5     8.0      9.0      1.0      8.0      8.0     15.0      4.0      3.0      7.0      4.0     5.0     33.0      40.6      2.0    0.857       0.8       1.0      0.6      23.8      28.6      21.4      20.5       5.3      16.9      32.2      33.3     187.0     126.0  DAL    105     0          1   240.0   240.0    40.0     98.0    0.408    17.0     39.0    0.436    13.0     18.0    0.722     17.0     32.0     49.0     28.0     10.0      7.0     13.0    16.0    110.0       NaN      NaN    0.519     0.495     0.398    0.184      32.7      66.7      49.0      70.0      10.4      12.5      10.9     100.0     114.3     109.1         NaN         NaN         8.0         21.0        0.667         5.0         10.0        0.625         3.0          4.0          1.0          7.0          6.0         13.0          9.0          2.0          3.0          3.0         4.0         23.0          18.0         11.0        0.731         0.731         0.667        0.333          21.7          30.1          21.0          55.4           5.4           8.7          20.0          26.4         159.0         115.0      CHO        110         1   2025 2025-01-20 False\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-01-17 22:59:28,148 - INFO - Combined statistics saved to: D:\\1. Python\\1. NBA Script\\2025\\Gathering_Data\\Whole_Statistic\\nba_games_2025-01-17.csv\n",
-      "2025-01-17 22:59:28,249 - INFO - File nba_games_2025-01-17.csv copied successfully\n"
+      "2025-01-21 21:27:48,675 - INFO - Combined statistics saved to: D:\\1. Python\\1. NBA Script\\2025\\Gathering_Data\\Whole_Statistic\\nba_games_2025-01-21.csv\n",
+      "2025-01-21 21:27:48,729 - INFO - File nba_games_2025-01-20.csv copied successfully\n"
      ]
     }
    ],
